some html changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Cancer Data</title>
+  <title>Cancer Data in the US (1981-2014)</title>
 
   <div class="top_border"><h1>Cancer Data </div>   
 </h1> 
@@ -43,7 +43,7 @@
     </style>
    
     
-<div class="box" data-aos="fade-up" data-aos-duration="2000" data-aos-easing="ease-in-quad">
+<div class="box" data-aos="zoom-in" data-aos-duration="2000" data-aos-easing="ease-in-quad">
     <h2>Animated using <code>fade-up</code>.</h2></div>
 
 
@@ -54,7 +54,7 @@ data-aos-delay="200" data-aos-duration="2000" data-aos-easing="ease-in-quad">
 
     </div>
     <div class="item" 
-    data-aos-delay="1000" data-aos="zoom-in">
+    data-aos-delay="2000" data-aos="zoom-in">
     
     </div>
 </body>
