--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,9 @@
 
 <!-- Our link to our CSS -->
 <link rel="stylesheet" type="text/css" href="static/css/style.css"/>
+
+<!--Link to jquery-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
 </head>
 
@@ -26,6 +29,7 @@
 
 <!-- Our JavaScript -->
 <script type="text/javascript" src="static/js/plots.js"></script>
+
 
 <!-- Our AOS JavaScript -->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -56,6 +60,16 @@ data-aos-delay="200" data-aos-duration="2000" data-aos-easing="ease-in-quad">
     data-aos-delay="2000" data-aos="zoom-in">
     
     </div>
+
+<!--Jquery Document Ready Function-->
+<!--
+<script>
+  $(document).ready(function() {
+
+    
+  });
+</script>
+-->
 </body>
 
 </html>
