--- a/templates/index.html
+++ b/templates/index.html
@@ -47,12 +47,12 @@
    
     
 <div class="box" data-aos="zoom-in" data-aos-duration="2000" data-aos-easing="ease-in-quad">
-    <h2>Animated using <code>fade-up</code>.</h2></div>
+    <h2>Cancer Mortality Rates. Please interact with our dashboard! <code>fade-up</code>.</h2></div>
 
 
 <div class="item" data-aos="zoom-in"
 data-aos-delay="200" data-aos-duration="2000" data-aos-easing="ease-in-quad">
-        <h2>working</h2></div>
+        <h2>Cancer Mortality visualizations 1981-2014</h2></div>
 
 
     </div>
