--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
    
     
 <div class="box" data-aos="zoom-in" data-aos-duration="2000" data-aos-easing="ease-in-quad">
-    <h2>Cancer Mortality Rates. Please interact with our dashboard! <code>fade-up</code>.</h2></div>
+    <h2>Cancer Mortality Rates. Please interact with our dashboard!</h2></div>
 
 
 <div class="item" data-aos="zoom-in"
